--- a/public_html/style.css
+++ b/public_html/style.css
@@ -44,7 +44,7 @@ header {
 
 .logo img {
 	width: 20vw;
-	max-width: 140px
+	max-width: 140px;
 }
 
 .apply {
@@ -96,6 +96,10 @@ small {
 p {
 	margin-bottom: 1em; 
 }
+
+i.fas, i.fab {
+	color: #DDDDDD;
+} 
 
 #content-wrapper {
 	max-width: 900px;
@@ -156,7 +160,7 @@ p {
 /*Footer Rules*/
 
 footer {
-	background-color: #7AA8ED;
+	background-color: #1F74A6;
 	color: white;
 }
 
@@ -200,6 +204,7 @@ footer {
 }
 
 .partners li img {
+	max-height: 100px;
 	object-fit: scale-down;
 }
 
@@ -210,14 +215,24 @@ footer {
 
 /*Navigation Rules*/
 .menu-toggle {
+	height: 100%;
 	margin-right: 1em;
 	border: none;
 	border-radius: 4px;
+	background-color: #1F74A6;
 }
 
-.menu-toggle i {
-	/*height: 3.5em;
-	width: 3.5em;*/
+i.fa-bars {
+	/*height: 80%;
+	width: 80%;*/
+	font-size: 1.5em;
+	color: #ffffff;
+	/*box-shadow: 2px 4px #999999;*/
+}
+
+.menu-toggle {
+	height: 2.5em;
+	width: 2.5em;
 }
 
 .pages ul {
